Checkpoint work to git

--- a/content/content/lectures/part1/index.html
+++ b/content/content/lectures/part1/index.html
@@ -1,6 +1,6 @@
 ---
-title: Web Applications and Sinatra
+title: Web Apps + Sinatra
 type: subsection
-collapsed: true
+collapsed: false
 order: 1
 ---
